# SDM_Plugin_HelloWorld

./: README.md
helloworld_plugin/: CMakeLists.txt  PluginHelloWorld.h  helloWorld.h
ifcexplorer_helloWorld/: PluginHelloWorld.cpp  PluginHelloWorld.h  helloWorld.cpp
